# Codet

./: Cargo.toml  LICENSE  readme.md
assets/: icon.icns
src/: main.rs
src/app/: message.rs  mod.rs  state.rs  update.rs  view.rs
src/models/: file_tree.rs  mod.rs
src/views/: editor.rs  home.rs  mod.rs  settings.rs
src/views/panels/: main_panel.rs  mod.rs  terminal.rs
src/widgets/: extended_sidebar.rs  file_explorer.rs  menu_bar.rs  mod.rs  sidebar.rs  status_bar.rs  statusbar.rs
