[package]
name = "codet"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14.0", features = ["svg", "image"] }

[package.metadata.bundle]
name = "Codet"
identifier = "com.noelpinto.codet"
icon = ["assets/icon.icns"]
category = "Developer Tool"
short_description = "A minimal code editor"